Adds test for IterativeDeepeningEngine